syntax = "proto3";

package rpc;

service ProductService {
  rpc GetProducts (ProductsRequest) returns (ProductsResponse) {}
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}

message ProductsRequest {
  repeated string ids = 1;
}

message ProductsResponse {
  repeated Product products = 1;
}
